# greennode-airflow-plugin

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
dags/: example_greennode.py  example_greennode_minimal.py
greennode_airflow_plugin/: __init__.py  greennode_operator.py  hook.py  plugin.py
tests/: test_operator.py  test_state.py
