[project]
name = "greennode-airflow-plugin"
version = "0.1.0"
description = "GreenNode Airflow Plugin - VNG Cloud integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0", "apache-airflow>=2.8.0"]

[project.entry-points.'apache_airflow_plugin']
greennode_airflow_plugin = "greennode_airflow_plugin.plugin:GreenNodePlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["greennode_airflow_plugin"]
