[project]
name = "greennode-airflow-plugin"
version = "0.2.0"
description = "Apache Airflow plugin để tích hợp với GreenNode (VNG Cloud Data Platform)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "VNG Cloud", email = "support@vngcloud.vn" }]
keywords = [
  "airflow",
  "airflow-plugin",
  "vng-cloud",
  "greennode",
  "spark",
  "data-platform",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Apache Airflow",
  "Framework :: Apache Airflow :: Provider",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["apache-airflow>=2.8.0", "requests>=2.28.0"]

[project.urls]
Homepage = "https://github.com/genius-wizard-dev/greennode-airflow-plugin"
Repository = "https://github.com/genius-wizard-dev/greennode-airflow-plugin"
Issues = "https://github.com/genius-wizard-dev/greennode-airflow-plugin/issues"

[project.entry-points."airflow.plugins"]
greennode = "greennode_airflow_plugin.plugin:GreenNodePlugin"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "isort>=5.12.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.4.0",
  "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["greennode_airflow_plugin"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
